<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="home"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_home"
        android:shortcutShortLabel="@string/shortcut_home"
        android:shortcutLongLabel="@string/shortcut_home_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="place.coho.app"
            android:targetClass="place.coho.app.MainActivity"
            android:data="https://localhost/" />
    </shortcut>

    <shortcut
        android:shortcutId="explore"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_explore"
        android:shortcutLongLabel="@string/shortcut_explore_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="place.coho.app"
            android:targetClass="place.coho.app.MainActivity"
            android:data="https://localhost/home?tab=search" />
    </shortcut>

    <shortcut
        android:shortcutId="notifications"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_notifications"
        android:shortcutShortLabel="@string/shortcut_notifications"
        android:shortcutLongLabel="@string/shortcut_notifications_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="place.coho.app"
            android:targetClass="place.coho.app.MainActivity"
            android:data="https://localhost/home?tab=notifications" />
    </shortcut>

    <shortcut
        android:shortcutId="messages"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_messages"
        android:shortcutShortLabel="@string/shortcut_messages"
        android:shortcutLongLabel="@string/shortcut_messages_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="place.coho.app"
            android:targetClass="place.coho.app.MainActivity"
            android:data="https://localhost/home?tab=messages" />
    </shortcut>

    <shortcut
        android:shortcutId="new_post"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_new_post"
        android:shortcutShortLabel="@string/shortcut_new_post"
        android:shortcutLongLabel="@string/shortcut_new_post_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="place.coho.app"
            android:targetClass="place.coho.app.MainActivity"
            android:data="https://localhost/home?newPost=true" />
    </shortcut>

</shortcuts>
